Giraph Change Log

Release 0.2.0 - unreleased

  GIRAPH-340: Added client/server ExecutionHandlers to Netty to avoid
  and added WrappedAdaptiveReceiveBufferSizePredictorFactory to
  debug/predict the size of the incoming messages. (aching)

  GIRAPH-274: Jobs still failing due to tasks timeout during
  INPUT_SUPERSTEP. (nitayj via aching)

  GIRAPH-337: Make a specific Giraph configuration for Class caching
  and specific Giraph configuration. (aching)

  GIRAPH-334: Bugfix HCatalog Hive profile. (nitayj via aching)

  GIRAPH-93: Hive input / output format. (nitayj via aching)

  GIRAPH-277: Text Vertex Input/Output Format base classes overhaul.
  (nitayj via aching)

  GIRAPH-331: ReviewBoard post-review config. (nitayj via aching)

  GIRAPH-332: Duplicate unnecessary info in giraph-formats-contrib
  compile.xml. (nitay via aching)

  GIRAPH-330: Ignores file for Git. (nitay via aching)

  GIRAPH-327: Timesout values in BspServiceMaster.barrierOnWorkerList
  (majakabiljo via ereisman)

  GIRAPH-323: Check if requests are done before calling wait (majakabiljo
  via ereisman)

  GIRAPH-298: Reduce timeout for TestAutoCheckpoint. (majakabiljo via
  aching)
	
  GIRAPH-324: Add option to use combiner in benchmarks. (apresta via
  aching)

  GIRAPH-191: Random walks on graphs (Gianmarco De Francisci Morales
  via ereisman)

  GIRAPH-320: Provide a runtime configuration for choosing the
  log level (aching via ereisman)

  GIRAPH-321: Divide by 0 exception. (ereisman via aching)

  GIRAPH-316: Add test-patch.sh for precommit test using Jenkins.
  (hyunsik via ereisman)

  GIRAPH-319: Receiving two responses for a request causes an
  exception. (apresta via aching)

  GIRAPH-291: PredicateLock should have a constructor to take in a
  custom waiting time and additional testing (aching via ereisman)

  GIRAPH-318: New Iterator in LocalityInfoSorter is not working.
  (Eli Reisman via apresta)

  GIRAPH-317: Add subpackages to comm (Maja Kabiljo via ereisman)
